# claw-trader

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: routes.py
backend/app/brokers/: __init__.py  dryrun.py  ibkr.py  polymarket.py
backend/app/core/: __init__.py  auth.py  config.py  database.py  events.py  logging.py  middleware.py  webhooks.py
backend/app/engines/: __init__.py  execution_engine.py  llm_brain.py  position_sizing.py  risk_engine.py  signal_engine.py
backend/app/feeds/: __init__.py  base.py  dummy.py  ibkr_feed.py  polymarket_feed.py
backend/tests/: conftest.py  test_auth.py  test_bug_fixes.py  test_database.py  test_dryrun.py  test_event_bus.py  test_execution_engine.py  test_feeds.py  test_ibkr.py  test_integration.py  test_iteration_31.py  test_iteration_32.py  test_iteration_33.py  test_iteration_34.py  test_iteration_35.py  test_llm_brain.py  test_middleware.py  test_polymarket.py  test_polymarket_feed.py  test_position_sizing.py  test_risk_engine.py  test_routes.py  test_signal_engine.py  test_webhooks.py
config/: cron-jobs.json  local-model.json  openclaw-trading.json
frontend/: Dockerfile  next.config.ts  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ErrorBoundary.tsx
scripts/: apply-config.sh  check-status.sh  setup-local-model.sh  start-trading.sh  stop-trading.sh
strategies/: conservative.md  hedge-discovery.md  position-check.md  scan-and-trade.md
(+2 files in other folders)
